@@ -1,5 +1,7 @@
 Search API 1.x, dev (xxxx-xx-xx):
 ---------------------------------
+- #2745655 by drunken monkey: Added test for (NOT) NULL conditions on fulltext
+  fields in DB backend.
 - #2574889 by drunken monkey, ChristianAdamski: Added Tour module integration.
 - #2814925 by kducharm, drunken monkey, Cyberwolf: Fixed indexing of computed
   fields.
